ingress-response.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    app.kubernetes.io/component: http-service
    app.kubernetes.io/instance: response
    app.kubernetes.io/managed-by: response
    app.kubernetes.io/name: response
    app.kubernetes.io/part-of: response
    certmanager.k8s.io/cluster-issuer: fld-letsencrypt-prd
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"app.kubernetes.io/component":"http-service","app.kubernetes.io/instance":"response","app.kubernetes.io/managed-by":"response","app.kubernetes.io/name":"response","app.kubernetes.io/part-of":"response","certmanager.k8s.io/cluster-issuer":"fld-letsencrypt-prd","kubernetes.io/ingress.allow-http":"false","kubernetes.io/ingress.class":"nginx","kubernetes.io/tls-acme":"true"},"labels":{"app.kubernetes.io/instance":"r [...]
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  creationTimestamp: "2019-07-11T22:03:41Z"
  generation: 3
  labels:
    app.kubernetes.io/instance: response
    app.kubernetes.io/name: response
    helm.sh/chart: response-0.1.0
  name: response
  namespace: incident-response
  resourceVersion: "42334574"
  selfLink: /apis/extensions/v1beta1/namespaces/incident-response/ingresses/response
  uid: be2f91d2-a427-11e9-9d55-4201a9100039
spec:
  rules:
  - host: incidents.fld.systems
    http:
      paths:
      - backend:
          serviceName: response
          servicePort: 8080
        path: /static
      - backend:
          serviceName: response
          servicePort: 8000
        path: /
  - host: incidents.fld.services
    http:
      paths:
      - backend:
          serviceName: response
          servicePort: 8080
        path: /static
      - backend:
          serviceName: response
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - incidents.fld.systems
    - incidents.fld.services
    secretName: tls-cert-incidents
status:
  loadBalancer:
    ingress:
    - {}
